--- a/scss/_contacto.scss
+++ b/scss/_contacto.scss
@@ -11,7 +11,7 @@
 .contacto {
     flex-direction: column;
     justify-content:flex-end;
-    padding-top: 10vh;
+    padding-top: 100px;
     p {
         width: 80%;
         padding-bottom: 30px;
