--- a/scss/_portafolio.scss
+++ b/scss/_portafolio.scss
@@ -6,7 +6,7 @@
     align-items: center;
     justify-content: start;
     width: 100%;
-    padding: 10vh 0;
+    padding: 100px 0;
     .grillaPortafolio {
         width: 70%;
         display: grid;
