--- a/scss/_servicios.scss
+++ b/scss/_servicios.scss
@@ -13,7 +13,7 @@
         flex-direction: column;
         align-items: center;
         justify-content: start;
-        padding: 10vh 0 5vh;
+        padding: 100px 0 5vh;
         text-align: center;
     }
     .servicios2 {
