--- a/scss/_sobremi.scss
+++ b/scss/_sobremi.scss
@@ -8,7 +8,7 @@
     align-items: center;
     justify-content: start;
     width: 100%;
-    padding-top: 10vh;
+    padding-top: 100px;
     .tarjetaClientes {
         width: 70%;
         display: flex;
