modificando altura servicios

--- a/css/style.css
+++ b/css/style.css
@@ -137,14 +137,12 @@ footer {
     padding: 10vh 0 5vh;
     text-align: center; }
   .mainServicios .servicios2 {
-    height: 70vh;
     padding-bottom: 10vh;
     width: 70%;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: repeat(2, 1fr);
-    grid-template-areas: "servicio4 servicio5 servicio6"
- "servicio1 servicio2 servicio3";
+    grid-template-areas: "servicio4 servicio5 servicio6" "servicio1 servicio2 servicio3";
     grid-column-gap: 30px;
     grid-row-gap: 30px;
     /*for*/ }
@@ -197,14 +195,7 @@ footer {
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: repeat(8, 1fr);
     grid-column-gap: 30px;
-    grid-template-areas: "auno vuno ados"
- "auno vuno ados"
- "vdos vuno vtres"
- "vdos atres vtres"
- "vdos atres vtres"
- "acuatro vcuatro acinco"
- "acuatro vcuatro acinco"
- ". vcuatro .";
+    grid-template-areas: "auno vuno ados" "auno vuno ados" "vdos vuno vtres" "vdos atres vtres" "vdos atres vtres" "acuatro vcuatro acinco" "acuatro vcuatro acinco" ". vcuatro .";
     /*map*/
     /*each*/ }
     .portafolio .grillaPortafolio div {
@@ -318,7 +309,6 @@ footer {
     justify-content: center; }
 
 .contacto2 {
-  height: 40vh;
   justify-content: center;
   padding: 5vh 0;
   width: 100%; }
@@ -392,9 +382,7 @@ footer {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     grid-template-rows: repeat(3, 1fr);
-    grid-template-areas: "servicio4 servicio5"
- "servicio6 servicio1"
- "servicio2 servicio3"; }
+    grid-template-areas: "servicio4 servicio5" "servicio6 servicio1" "servicio2 servicio3"; }
   .aboutMe {
     width: 70%;
     text-align: center; }
@@ -424,12 +412,7 @@ footer {
     display: grid;
     grid-template-columns: 1fr;
     grid-template-rows: repeat(6, 1fr);
-    grid-template-areas: "servicio4"
- "servicio5"
- "servicio6"
- "servicio1"
- "servicio2"
- "servicio3"; }
+    grid-template-areas: "servicio4" "servicio5" "servicio6" "servicio1" "servicio2" "servicio3"; }
   .aboutMe {
     width: 70%;
     text-align: center; }
@@ -439,23 +422,10 @@ footer {
     grid-template-columns: 100%;
     grid-template-rows: repeat(9, auto);
     grid-row-gap: 30px;
-    grid-template-areas: "auno"
- "vuno"
- "ados"
- "vdos"
- "atres"
- "vtres"
- "acuatro"
- "vcuatro"
- "acinco"; }
+    grid-template-areas: "auno" "vuno" "ados" "vdos" "atres" "vtres" "acuatro" "vcuatro" "acinco"; }
   .sobremi .skills {
     width: 70%;
     display: grid;
     grid-template-columns: 100%;
     grid-template-rows: repeat(6, 100px);
-    grid-template-areas: "contenido"
- "facebook"
- "google"
- "html"
- "css"
- "js"; } }
+    grid-template-areas: "contenido" "facebook" "google" "html" "css" "js"; } }
