--- a/scss/_portafolio.scss
+++ b/scss/_portafolio.scss
@@ -11,28 +11,10 @@
         width: 70%;
         display: grid;
         grid-template-columns:repeat(3, 1fr);
-        grid-template-rows: repeat(8, 1fr);
-        grid-column-gap: 30px;
-        grid-template-areas:
-        "auno vuno ados"
-        "auno vuno ados"
-        "vdos vuno vtres"
-        "vdos atres vtres"
-        "vdos atres vtres"
-        "acuatro vcuatro acinco"
-        "acuatro vcuatro acinco"
-        ". vcuatro ." ;
+        grid-template-rows: 1fr;
         div {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            overflow: hidden;
             img {
                 width: 100%;
-            }
-            img:hover {
-                transform: scale(1.2);
-                transition: 1s;
             }
         }
 
