--- a/scss/_responsive.scss
+++ b/scss/_responsive.scss
@@ -4,10 +4,7 @@
     }
 }
 
-@media only screen and (max-width: 767px) {
-    .hero div {
-        width: 480px;
-    }
+@media only screen and (max-width: 992px) {
     .mainServicios .servicios2 {
         height: 100%;
         display: grid;
@@ -18,10 +15,40 @@
         "servicio6 servicio1"
         "servicio2 servicio3";
     }
+
+    .sobremi .curriculum .foto_perfil {
+        width: 50%;
+    }
+
+    .sobremi .curriculum .info {
+        width: 50%;
+    }
+
+    .sobremi .curriculum .info div {
+        display: block;
+    }
+}
+
+@media only screen and (max-width: 767px) {
+    .hero div {
+        width: 480px;
+    }
+    
     .aboutMe {
         width: 70%;
         text-align: center;
     }
+    .sobremi .curriculum {
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+    }
+
+    .sobremi .curriculum .info {
+        padding: 20px 0;
+        width: 70%;
+    }
+
     .sobremi .carousel {
         height: 380px;
     }
@@ -50,10 +77,7 @@
 }
 
 
-@media only screen and (max-width: 480px) {
-    .hero div {
-        width: 350px;
-    }
+@media only screen and (max-width: 600px) {
     .mainServicios .servicios2 {
         height: 100%;
         display: grid;
@@ -66,6 +90,15 @@
         "servicio1"
         "servicio2"
         "servicio3";
+    }
+    .sobremi .curriculum .foto_perfil {
+        width: 70%;
+    }
+}
+
+@media only screen and (max-width: 480px) {
+    .hero div {
+        width: 350px;
     }
     .aboutMe {
         width: 70%;
@@ -89,6 +122,12 @@
             "vcuatro"
             "acinco";
     }
+
+    .sobremi .curriculum .info {
+        padding: 20px 0;
+        width: 100%;
+    }
+
     .sobremi .skills {
         width: 70%;
         display: grid;
