--- a/scss/_servicios.scss
+++ b/scss/_servicios.scss
@@ -15,6 +15,9 @@
         justify-content: start;
         padding: 10vh 0 5vh;
         text-align: center;
+        p {
+            font-size: 20px;
+        }
     }
     .servicios2 {
         padding-bottom: 10vh;
