--- a/scss/_sobremi.scss
+++ b/scss/_sobremi.scss
@@ -18,6 +18,30 @@
         p {
             padding: 20px;
             text-align: center;
+            margin-bottom: 50px;
+        }
+    }
+    .curriculum {
+        display: flex;
+        width: 70%;
+        margin-bottom: 50px;
+        .foto_perfil {
+            width: 30%;
+            img {
+                border-radius: 0;
+                width: 100%;
+            }
+        }
+        .info {
+            width: 70%;
+            padding: 0 30px;
+            div {
+                display: flex;
+                justify-content: space-between;
+                ul {
+                    list-style: none;
+                }
+            }
         }
     }
     .skills {
