--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -1,12 +1,11 @@
 @import 'variables';
+@import 'flex';
 /*header*/
 
 header {
     background-color: $colorDamasco;
     padding: 10px 0;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
+    @include flex (flex, row, space-between, center);
     position: fixed;
     top: 0;
     width: 100%;
