--- a/scss/_servicios.scss
+++ b/scss/_servicios.scss
@@ -1,19 +1,16 @@
 @import 'variables';
-
+@import 'flex';
 /*------ SERVICIOS ------*/
 
 .mainServicios {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    @include flex (flex, column, center, center);
     .servicios {
         width: 70%;
         display: flex;
         flex-direction: column;
         align-items: center;
         justify-content: start;
-        padding: 10vh 0 5vh;
+        padding: 100px 0 50px;
         text-align: center;
         p {
             font-size: 20px;
@@ -63,11 +60,12 @@
         }
     }
     .aboutMe {
-        height: 20vh;
+        height: 100%;
         display: flex;
         flex-direction: column;
         justify-content: start;
         align-items: center;
+        padding-bottom: 50px;
     }
 }
 
