--- a/scss/_responsive.scss
+++ b/scss/_responsive.scss
@@ -110,6 +110,7 @@
     .portafolio .grillaPortafolio {
         grid-template-columns: 100%;
         grid-template-rows: repeat(3, auto);
+        grid-template-areas: "auno" "ados" "atres";
     }
 
     .sobremi .curriculum .info {
