--- a/scss/_portafolio.scss
+++ b/scss/_portafolio.scss
@@ -5,44 +5,67 @@
 .portafolio {
     @include flex (flex, column, start, center);
     width: 100%;
-    padding: 100px 0 50px;
+    padding: 100px 0;
     .grillaPortafolio {
         width: 70%;
         display: grid;
         grid-template-columns:repeat(3, 1fr);
         grid-template-rows: 1fr;
         grid-template-areas: 
-        "auno ados atres"
-        ;
+        "auno ados atres";
         .portafolio__imagenes {
             display: grid;
             grid-template-areas:
-            "va" "vb" "vc";
+            "va" "vb" "vc" "vd" "ve" "vf";
             /*each*/
+            .overlay {
+                position: absolute;
+                width: 100%;
+                height: 100%;
+                top: 0;
+                left: 0;
+                right: 0;
+                bottom: 0;
+                background-color: rgba(0,0,0,0.3);
+                z-index: 2;
+                cursor: pointer;
+                opacity: 1;
+                &:hover{
+                   display: block;
+                   opacity: 0;
+                   transition: .3s;
+                }
+            }
             div {
+                &:hover {
+                    cursor: pointer;
+                }
                 img {
                     width: 100%;
                 }
             }
         }
         .auno {
-            @each $portafolioUno in a, b, c {
+            @each $portafolioUno in a, b, c, d, e, f {
                 .auno#{$portafolioUno} {
                     grid-area: v#{$portafolioUno};
+                    position: relative;
                 }
             }
         }
         .ados {
-            @each $portafolioDos in a, b, c {
+            @each $portafolioDos in a, b, c, d, e, f {
                 .ados#{$portafolioDos} {
                     grid-area: v#{$portafolioDos};
+                    position: relative;
                 }
             }
         }
         .atres {
-            @each $portafolioTres in a, b, c {
+            @each $portafolioTres in a, b, c, d, e, f {
                 .atres#{$portafolioTres} {
                     grid-area: v#{$portafolioTres};
+                    position: relative;
                 }
             }
         }
@@ -53,6 +76,9 @@
             uno: uno,
             dos: dos,
             tres: tres,
+            cuatro: cuatro,
+            cinco: cinvco,
+            seis: seis
         );
         @each $foto, $area in $portafolio {
             .a#{$foto} {
