--- a/scss/_servicios.scss
+++ b/scss/_servicios.scss
@@ -61,11 +61,20 @@
     }
     .aboutMe {
         height: 100%;
+        width: 70%;
         display: flex;
         flex-direction: column;
         justify-content: start;
         align-items: center;
         padding-bottom: 50px;
+        p {
+            font-size: 20px;
+            text-align: center;
+        }
+        img {
+            width: 60%;
+            margin: 30px 0;
+        }
     }
 }
 
