--- a/css/style.css
+++ b/css/style.css
@@ -205,20 +205,21 @@ footer {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: 1fr;
+    grid-column-gap: 10px;
     grid-template-areas: "auno ados atres";
     /*map*/ }
     .portafolio .grillaPortafolio .portafolio__imagenes {
       display: grid;
+      grid-row-gap: 10px;
       grid-template-areas: "va" "vb" "vc" "vd" "ve" "vf";
       /*each*/ }
       .portafolio .grillaPortafolio .portafolio__imagenes .overlay {
         position: absolute;
         width: 100%;
         height: 100%;
-        top: 0;
-        left: 0;
-        right: 0;
-        bottom: 0;
+        margin: 20px;
+        top: -20px;
+        left: -20px;
         background-color: rgba(0, 0, 0, 0.3);
         z-index: 2;
         cursor: pointer;
@@ -227,10 +228,12 @@ footer {
           display: block;
           opacity: 0;
           transition: .3s; }
-      .portafolio .grillaPortafolio .portafolio__imagenes div:hover {
-        cursor: pointer; }
-      .portafolio .grillaPortafolio .portafolio__imagenes div img {
-        width: 100%; }
+      .portafolio .grillaPortafolio .portafolio__imagenes div {
+        margin: 20px; }
+        .portafolio .grillaPortafolio .portafolio__imagenes div:hover {
+          cursor: pointer; }
+        .portafolio .grillaPortafolio .portafolio__imagenes div img {
+          width: 100%; }
     .portafolio .grillaPortafolio .auno .aunoa {
       grid-area: va;
       position: relative; }
