--- a/scss/_portafolio.scss
+++ b/scss/_portafolio.scss
@@ -11,10 +11,12 @@
         display: grid;
         grid-template-columns:repeat(3, 1fr);
         grid-template-rows: 1fr;
+        grid-column-gap: 10px;
         grid-template-areas: 
         "auno ados atres";
         .portafolio__imagenes {
             display: grid;
+            grid-row-gap: 10px;
             grid-template-areas:
             "va" "vb" "vc" "vd" "ve" "vf";
             /*each*/
@@ -22,10 +24,9 @@
                 position: absolute;
                 width: 100%;
                 height: 100%;
-                top: 0;
-                left: 0;
-                right: 0;
-                bottom: 0;
+                margin: 20px;
+                top: -20px;
+                left: -20px;
                 background-color: rgba(0,0,0,0.3);
                 z-index: 2;
                 cursor: pointer;
@@ -37,6 +38,7 @@
                 }
             }
             div {
+                margin: 20px;
                 &:hover {
                     cursor: pointer;
                 }
