--- a/scss/_servicios.scss
+++ b/scss/_servicios.scss
@@ -49,7 +49,7 @@
                 font-size: 20px;
             }
             p {
-                text-align: center;
+                text-align: justify;
             }
         }
         div:hover {
@@ -69,7 +69,7 @@
         padding-bottom: 50px;
         p {
             font-size: 20px;
-            text-align: center;
+            text-align: justify;
         }
         img {
             width: 60%;
