--- a/scss/_contacto.scss
+++ b/scss/_contacto.scss
@@ -15,7 +15,7 @@
     p {
         width: 80%;
         padding-bottom: 30px;
-        text-align: center;
+        text-align: justify;
     }
     div {
         width: 100%;
