--- a/scss/_sobremi.scss
+++ b/scss/_sobremi.scss
@@ -12,13 +12,12 @@
     .tarjetaClientes {
         width: 70%;
         display: flex;
-        flex-direction: column;
         justify-content: center;
-        align-items: center;
         p {
             padding: 20px;
-            text-align: center;
+            text-align: justify;
             margin-bottom: 50px;
+            width: 50%;
         }
     }
     .curriculum {
